--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="styleseet" type="text/css" href="indexstyles.css">
+    <link rel="styleseet" type="text/css" href="indexstyles.css"></link>
     <title>Indian Map War Multigame</title>
 </head>
 <body>
