--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <link href="indexstyles.css" rel="styleseet" type="text/css">
     <title>Indian Map War Multigame</title>
@@ -58,3 +59,4 @@
     </form>
     <a href="page2.html"><button>Continue</button></a>
 </body>
+</html>
