--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link href="indexstyles.css" rel="styleseet" type="text/css">
+    <link href="./indexstyles.css" rel="styleseet" type="text/css">
     <title>Indian Map War Multigame</title>
 </head>
 <body>
