--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
-    <form id="Form1" name="Form1">
-        <input placeholder="Username"></input>
+    <form>
+        <input id="Username" name="Username" placeholder="Username"></input>
         <select>
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
