--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2>Enter Your Username and Select Your Region</h2>
     <form>
         <input id="Username" name="Username" placeholder="Username"></input>
-        <select>
+        <select id="Region" name="Region">
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
             <option value="AR">Arunachal Pradesh</option>
