--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
     <form>
-        <input id="Username" name="Username" placeholder="Username"></input>
-        <select id="Region" name="Region">
+        <input id="Username" name="Username" autocomplete="on" placeholder="Username"></input>
+        <select id="Region" name="Region" autocomplete="on">
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
             <option value="AR">Arunachal Pradesh</option>
