--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
     <form>
-        <label for="Username">Username:</label>
-        <input type="text" id="Username" name="Username" value="Username" autocomplete="on"></input>
+        <input type="text" id="Username" name="Username" value="Username" placeholder="Username" autocomplete="on"></input>
         <select id="Region" name="Region" autocomplete="on">
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
