--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <form>
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on"></input>
         <select id="Region" name="Region" autocomplete="on">
+            <option value="0" selected="selected" disabled>Select Your Region</option>
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
             <option value="AR">Arunachal Pradesh</option>
