--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
     <form>
-        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on"></input>
-        <select id="Region" name="Region" autocomplete="on">
+        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required></input>
+        <select id="Region" name="Region" autocomplete="on" required>
             <option value="0" selected="selected" disabled>Select Your Region</option>
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
