--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
-    <form>
+    <form action="page2.html">
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required></input>
         <select id="Region" name="Region" autocomplete="on" required>
             <option value="0" selected="selected" disabled>Select Your Region</option>
