--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
             <option value="PK">Pakistan</option>
             <option value="LK">Sri Lanka</option>
         </select>
+        <input type=sumbit value="Continue"></input>
     </form>
-    <a href="page2.html"><button>Continue</button></a>
 </body>
