--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
             <option value="PK">Pakistan</option>
             <option value="LK">Sri Lanka</option>
         </select>
-        <input type=sumbit value="Continue"></input>
+        <button type="button" id="Continue1">Continue</button>
     </form>
 </body>
