--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <h2>Enter Your Username and Select Your Region</h2>
-    <form action="page2.html">
-        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required></input>
+    <form action="action_page.php">
+        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required>
         <select id="Region" name="Region" autocomplete="on" required>
             <option value="0" selected="selected" disabled>Select Your Region</option>
             <optgroup label="Indian States"></optgroup>
@@ -56,6 +56,6 @@
             <option value="PK">Pakistan</option>
             <option value="LK">Sri Lanka</option>
         </select>
-        <button type="button" id="Continue1">Continue</button>
+        <input type="submit" name="Sumbit1" id="Submit1" value="Continue">
     </form>
 </body>
