--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <a href="#step1"></a>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Indian Map War Multigame</title>
 </head>
