--- a/enter-your-username-and-select-your-region.html
+++ b/enter-your-username-and-select-your-region.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta HTTP-EQUIV="REFRESH" content="0; url="https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Indian Map War Multigame</title>
 </head>
