--- a/enter-your-username-and-select-your-region.html
+++ b/enter-your-username-and-select-your-region.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta http-equiv="refresh" content="time; url=https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region"/>
+    <meta http-equiv="refresh" content="3; url='https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region'" />
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Indian Map War Multigame</title>
 </head>
