--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv:"refresh" content"3" url="https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region">
+<meta http-equiv:"refresh" content"3" url="https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region"></meta>
