--- a/enter-your-username-and-select-your-region.html
+++ b/enter-your-username-and-select-your-region.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="enter-your-username-and-select-your-region.css">
     <title>Indian Map War Multigame</title>
 </head>
 <body>
