--- a/enter-your-username-and-select-your-region.html
+++ b/enter-your-username-and-select-your-region.html
@@ -56,6 +56,6 @@
             <option value="PK">Pakistan</option>
             <option value="LK">Sri Lanka</option>
         </select>
-        <input type="submit" name="Sumbit1" id="Submit1" value="Continue" onclick="location.href='page2.html'">
+        <input type="submit" name="Sumbit1" id="Submit1" value="Continue" onclick="location.href='choose-your-game-mode.html'">
     </form>
 </body>
