--- a/enter-your-username-and-select-your-region.html
+++ b/enter-your-username-and-select-your-region.html
@@ -8,7 +8,7 @@
     <h2>Enter Your Username and Select Your Region</h2>
     <form>
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required>
-        <select id="Region" name="Region" autocomplete="on" required>
+        <select id="Region" name="Region" class="Region" autocomplete="on" required>
             <option value="0" selected="selected" disabled>Select Your Region</option>
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
