--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="refresh" content="3; url="https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region"/>
+</head>
