--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <meta http-equiv="refresh" content="3; url="https://shivraj957.github.io/indianmapwarmultigame/enter-your-username-and-select-your-region"/>
+    <link rel="stylesheet" type="text/css" href="enter-your-username-and-select-your-region.css">
+    <title>Indian Map War Multigame</title>
 </head>
+<body>
+    <h1>Indian Map War Multigame</h1>
