--- a/step1.html
+++ b/step1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Indian Map War Multigame</h1>
-    <h2>Enter Your Username and Select Your Region</h2>
+    <h2>Step 1: Enter Your Username and Select Your Region</h2>
     <form>
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required>
         <select id="Region" name="Region" class="Region" autocomplete="on" required>
