--- a/step1.html
+++ b/step1.html
@@ -56,6 +56,6 @@
             <option value="PK">Pakistan</option>
             <option value="LK">Sri Lanka</option>
         </select>
-        <input type="submit" name="Sumbit1" id="Submit1" value="Continue" onclick="location.href='choose-your-game-mode.html'">
+        <input type="submit" name="Sumbit1" id="Submit1" value="Continue" onclick="location.href='step2.html'">
     </form>
 </body>
