--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 </head>
 <body>
     <h1>Indian Map War Multigame</h1>
-    <input type="submit" name="Sumbit1" id="Submit1" value="Start" onclick="location.href='step1.html'">
+    <button type="button" onclick="location.href='step1.html'">Start</button>
