--- a/step1.html
+++ b/step1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="step1.css">
+    <script src="step1.js"></script>
     <title>Indian Map War Multigame</title>
 </head>
 <body>
