--- a/step1.html
+++ b/step1.html
@@ -8,8 +8,8 @@
     <h1>Indian Map War Multigame</h1>
     <h2>Step 1: Enter Your Username and Select Your Region</h2>
     <form>
-        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on" required>
-        <select id="Region" name="Region" class="Region" autocomplete="on" required>
+        <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on">
+        <select id="Region" name="Region" class="Region" autocomplete="on">
             <option value="0" selected="selected" disabled>Select Your Region</option>
             <optgroup label="Indian States"></optgroup>
             <option value="AP">Andhra Pradesh</option>
