--- a/step1.html
+++ b/step1.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <h2>Step 1: Enter Your Username and Select Your Region</h2>
-    <form>
+    <form id="Form1">
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on">
         <select id="Region" name="Region" class="Region" autocomplete="on">
             <option value="0" selected="selected" disabled>Select Your Region</option>
