--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 </head>
 <body>
     <h1>Indian Map War Multigame</h1>
-    <button type="button" onclick="location.href='step1.html'">Start</button>
+    <button type="button" onclick="location.href='step1.html'">Start Game</button>
