--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Indian Map War Multigame</title>
 </head>
 <body>
-    <h1>Indian Map War Multigame</h1>
-    <div>
-        <button id="StartGame" type="button" onclick="location.href='step1.html'">Start Game</button>
-    </div>
+    <h1>Indian Map War Multigame</h1
+    <button id="StartGame" type="button" onclick="location.href='step1.html'">Start Game</button>
+</body>
