--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </head>
 <body>
     <h1>Indian Map War Multigame</h1>
-    <button id="StartGame" type="button" onclick="location.href='step1.html'">Start Game</button>
+    <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
 </body>
