--- a/tutorial.html
+++ b/tutorial.html
@@ -6,4 +6,8 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <h2>Tutorial</h2>
+    <p>1. Enter your username, select your region and choose your game mode.  The game mode is either ludo or uno.
+    2. This game is played in 2 teams. The teams are chosen randomly.
+    3. A player is paired with a random player from the opposing team. 
+    4. If the game mode is ludo, all the players in the same room also play ludo. The same applies for uno.</p>
 </body>
