--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <body>
     <h1>Indian Map War Multigame</h1>
     <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
+    <button type="button" id="Tutorial" onclick="location.href='tutorial.html'">Tutorial</button>
 </body>
