--- a/tutorial.html
+++ b/tutorial.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="tutoriaL.css">
+    <link rel="stylesheet" type="text/css" href="tutorial.css">
     <title>Indian Map War Multigame</title>
 </head>
 <body>
