--- a/tutorial.html
+++ b/tutorial.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="tutorial.css">
-    <title>Indian Map War Multigame</title>
+    <title>Indian Subcontinent Wun</title>
 </head>
 <body>
-    <h1>Indian Map War Multigame</h1>
+    <h1>Indian Subcontinent Wun</h1>
     <h2>Tutorial</h2>
     <p>1. Enter your username, select your region and choose your game mode.  The game mode is either ludo or uno.</p>
     <p>2. This game is played in 2 teams. The teams are chosen randomly.</p>
