--- a/step2.html
+++ b/step2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="step2.css">
-    <title>Indian Map War Multigame</title>
+    <title>Indian Subcontinent Wun</title>
 </head>
 <body>
-    <h1>Indian Map War Multigame</h1>
+    <h1>Indian Subcontinent Wun</h1>
     <h2>Choose Your Game Mode</h2>
