--- a/step1.html
+++ b/step1.html
@@ -2,10 +2,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="step1.css">
     <script src="step1.js"></script>
-    <title>Indian Map War Multigame</title>
+    <title>Indian Subcontinent Wun</title>
 </head>
 <body>
-    <h1>Indian Map War Multigame</h1>
+    <h1>Indian Subcontinent Wun</h1>
     <h2>Step 1: Enter Your Username and Select Your Region</h2>
     <form id="Form1">
         <input type="text" id="Username" name="Username" placeholder="Username" autocomplete="on">
