--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Indian Map War Multigame</title>
+    <title>Indian Subcontinent Wun</title>
 </head>
 <body>
-    <h1>Indian Map War Multigame</h1>
+    <h1>Indian Subcontinent Wun</h1>
     <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
     <button type="button" id="Tutorial" onclick="location.href='tutorial.html'">Tutorial</button>
 </body>
