--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="tutorial.css">
-    <title>Indian Subcontinent Wun</title>
+    <title>Game Tutorial</title>
 </head>
 <body>
     <h1>Indian Subcontinent Wun</h1>
