--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Indian Subcontinent Wun</h1>
-    <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
-    <button type="button" id="Tutorial" onclick="location.href='tutorial.html'">Tutorial</button>
+    <div>
+        <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
+        <button type="button" id="Tutorial" onclick="location.href='tutorial.html'">Tutorial</button>
+    </div>
 </body>
