--- a/step2.html
+++ b/step2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="step2.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Indian Subcontinent Wun</title>
 </head>
 <body>
