--- a/tutorial.html
+++ b/tutorial.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="tutorial.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Game Tutorial</title>
 </head>
 <body>
