--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Indian Subcontinent Wun</title>
 </head>
 <body>
+    <img src="favicon.png">
     <h1>Indian Subcontinent Wun</h1>
     <div>
         <button type="button" id="StartGame" onclick="location.href='step1.html'">Start Game</button>
