--- a/step1.html
+++ b/step1.html
@@ -5,6 +5,7 @@
     <title>Indian Subcontinent Wun</title>
 </head>
 <body>
+    <img src="favicon.png">
     <h1>Indian Subcontinent Wun</h1>
     <h2>Step 1: Enter Your Username and Select Your Region</h2>
     <form id="Form1" action="step2.html">
